# emoji-nook

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  EMOJI_UI_PORTING_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  experiment-arch-appimage.yml  release.yml
apps/emoji-picker/: README.md  eslint.config.mjs  package.json  vite.config.ts  vitest.config.ts
apps/emoji-picker/src/: App.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
apps/emoji-picker/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/emoji-picker/src-tauri/capabilities/: default.json
apps/emoji-picker/src-tauri/icons/: icon.icns
apps/emoji-picker/src-tauri/src/: injection.rs  lib.rs  main.rs
apps/emoji-picker/src/components/: CategoryBar.test.tsx  CategoryBar.tsx  EmojiPickerPanel.test.tsx  EmojiPickerPanel.tsx  PickerShell.tsx  SettingsPanel.tsx
apps/emoji-picker/src/hooks/: useSettings.ts  useTheme.test.tsx  useTheme.ts
apps/emoji-picker/src/test/: setup.ts
apps/emoji-picker/src/utils/: logger.ts
docs/: architecture.md  blog-building-with-ai.md  blog-ci-and-release-automation.md  blog-frimousse-deep-dive.md  blog-introducing-emoji-nook.md  blog-native-theming-linux.md  blog-tauri-v2-plugin-permissions.md  blog-the-story-of-emoji-nook.md  linux-setup.md  release-checklist.md  releasing.md
docs/implementation-plans/: ci-quality-gates.md  ci-validation.md  desktop-integration.md  emoji-picker-ui.md  releasing.md
plugins/desktop-integration/: Cargo.toml  README.md  build.rs
plugins/desktop-integration/guest-js/: package.json
plugins/desktop-integration/guest-js/src/: index.ts
plugins/desktop-integration/permissions/: default.toml
plugins/desktop-integration/permissions/autogenerated/: reference.md
plugins/desktop-integration/permissions/schemas/: schema.json
plugins/desktop-integration/src/: lib.rs
plugins/xdg-portal/: Cargo.toml  SPEC.md  build.rs
plugins/xdg-portal/dist-js/: index.js
plugins/xdg-portal/guest-js/: package.json
plugins/xdg-portal/guest-js/src/: index.ts
plugins/xdg-portal/permissions/: default.toml
plugins/xdg-portal/permissions/autogenerated/: reference.md
plugins/xdg-portal/permissions/autogenerated/commands/: bind_global_shortcut.toml  close_remote_desktop_session.toml  create_remote_desktop_session.toml  inject_text.toml  unbind_global_shortcut.toml
plugins/xdg-portal/permissions/schemas/: schema.json
plugins/xdg-portal/src/: commands.rs  error.rs  global_shortcuts.rs  lib.rs  linux.rs  models.rs
scripts/: check-release-versions.sh  dev-desktop-install.sh  dev-desktop-uninstall.sh  prepare-release-version.sh  setup-linux.sh
