[workspace]
members = [
  "apps/emoji-picker/src-tauri",
  "plugins/desktop-integration",
  "plugins/xdg-portal"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2" }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
thiserror = "2"
tracing = "0.1"
