[package]
name = "tauri-plugin-desktop-integration"
version = "0.1.0"
description = "Desktop activation helpers for Emoji Nook"
authors = ["Liminal HQ, Scott Morris"]
license.workspace = true
edition.workspace = true

[dependencies]
gdk = "0.18"
gdkx11 = "0.18"
gtk = "0.18"
log = { workspace = true }
tauri = { workspace = true }
