[package]
name = "tauri-plugin-desktop-integration"
version = "0.2.0"
description = "Desktop activation helpers for Emoji Nook"
authors = ["Liminal HQ, Scott Morris"]
license.workspace = true
edition.workspace = true
homepage = "https://github.com/liminal-hq/emoji-nook"
repository = "https://github.com/liminal-hq/emoji-nook"
build = "build.rs"
links = "tauri-plugin-desktop-integration"

[lib]
name = "tauri_plugin_desktop_integration"
crate-type = ["rlib", "cdylib"]

[dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio", "wayland"] }
gdk = "0.18"
gdkx11 = "0.18"
gtk = "0.18"
log = { workspace = true }
raw-window-handle = "0.6"
serde = { workspace = true }
tauri = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-xdg-portal = { path = "../xdg-portal" }
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
