[package]
name = "tauri-plugin-xdg-portal"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "Tauri plugin for xdg-desktop-portal integrations"
authors = ["Liminal HQ, Scott Morris"]
homepage = "https://github.com/liminal-hq/emoji-nook"
repository = "https://github.com/liminal-hq/emoji-nook"
build = "build.rs"
links = "tauri-plugin-xdg-portal"

[lib]
name = "tauri_plugin_xdg_portal"
crate-type = ["rlib", "cdylib"]

[dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "sync"] }
tracing = { workspace = true }

[features]
default = []
global-shortcuts = []
remote-desktop = []

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
