[package]
name = "emoji-picker"
version = "0.1.0"
description = "A native Linux emoji picker that blends with your desktop"
authors = ["Liminal HQ, Scott Morris"]
license.workspace = true
homepage = "https://github.com/liminal-hq/emoji-nook"
repository = "https://github.com/liminal-hq/emoji-nook"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emoji_picker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
log = "0.4"
tauri = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-desktop-integration = { path = "../../../plugins/desktop-integration" }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = { workspace = true }
tauri-plugin-xdg-portal = { path = "../../../plugins/xdg-portal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
